// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Countdown /> Should render Countdown with please wait message 1`] = `
<div
  className="timer-block__timer"
>
  <h3>
    Time left
  </h3>
  <p
    className="timing-block--background"
  >
    Hang on a second...
  </p>
</div>
`;

exports[`<Countdown /> Should render Countdown with time remaining 1`] = `
<div
  className="timer-block__timer"
>
  <h3>
    Time left
  </h3>
  <p
    className="timing-block--highlight"
  >
    0:55
  </p>
</div>
`;
